correction de la mise en page

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body
 {
     margin: auto;
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header
